...
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>

    <string name = "log_in">Login</string>
    <string name = "Register">Register</string>
    <string name = "Cancel">Cancel</string>
    <string name = "Delete_Vin">Delete Vin</string>
    <string name = "Maps">Maps</string>
    <string name = "Schedule_An_Appointment">Schedule an Appointment</string>
    <string name = "Select_Date">Select Date</string>
...
    <string name = "Welcome_to_DashBoard">Welcome to DashBoard</string>
    <string name = "log_out">Logout</string>
    <string name = "Enter_your_appointment_details">Enter your appointment details</string>
    <string name = "Which_vehicle_needs_serviced">Which vehicle needs serviced?</string>
    <string name = "Describe_your_vehicle_issue">Describe your vehicle issue</string>
    <string name = "Any_other_notes_about_this_appointment">Any other notes about this appointments</string>
    <string name = "Please_Enter_Vehicle_Information">Please Enter Vehicle Information</string>
    <string name = "UserName">UserName</string>
    <string name = "Email">Email</string>
    <string name = "Password">Password</string>
    <string name = "Phone_number">Phone Number</string>
    <string name = "Repair_shop_name">Repair shop name [GOOGLE MAPS]</string>
    <string name = "Repair_shop_location">Repair shop location [GOOGLE MAPS]</string>
...
